--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,1 +1,43 @@
-{}
+{
+    "menu": "menu",
+    "lobby": "lobby",
+    "history": "history",
+    "how-to-play": "how to play",
+    "payout-and-limit": "payout and limit",
+    "promotion": "promosi",
+    "settings": "settings",
+    "video": "video",
+    "live-streaming-sound": "live streaming sound",
+    "game-effects": "game effects",
+    "auto-rebet": "auto rebet",
+    "language": "language",
+    "main-bet": "taruhan utama",
+    "limit-bet": "limit bet",
+    "payout": "payout",
+    "side-bet": "side bet",
+    "note": "note",
+    "note-payout-and-limit": "Side bets cannot exceed half the amount of the main bet",
+    "high": "high",
+    "medium": "medium",
+    "auto": "auto",
+    "today": "today",
+    "previous": "previous",
+    "bet": "bet",
+    "win": "win",
+    "period": "period",
+    "total": "total",
+    "statistic": "statistic",
+    "no-transactions": "no transactions",
+    "no-result": "no result",
+    "hide": "hide",
+    "favorite": "favorite",
+    "cancel": "cancel",
+    "rebet": "rebet",
+    "double": "double",
+    "mode": "mode",
+    "stop": "stop",
+    "total-bet": "total bet",
+    "you-win": "you win",
+    "bet-confirmed": "bet confirmed",
+    "bet-error": "bet error"
+}
