--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -1,1 +1,44 @@
-{}
+{
+    "menu": "메뉴",
+    "lobby": "로비",
+    "history": "기록",
+    "how-to-play": "게임 방법",
+    "payout-and-limit": "지불 및 제한",
+    "promotion": "프로모션",
+    "settings": "설정",
+    "video": "비디오",
+    "live-streaming-sound": "라이브 스트리밍 사운드",
+    "game-effects": "게임 효과",
+    "auto-rebet": "자동 재배팅",
+    "language": "언어",
+    "main-bet": "주요 베팅",
+    "limit-bet": "한도 베팅",
+    "payout": "지불",
+    "side-bet": "사이드 베팅",
+    "note": "노트",
+    "note-payout-and-limit": "사이드 베팅은 주요 베팅 금액의 절반을 초과할 수 없습니다",
+    "high": "높음",
+    "medium": "중간",
+    "auto": "자동",
+    "today": "오늘",
+    "previous": "이전",
+    "bet": "베팅",
+    "win": "승리",
+    "period": "기간",
+    "total": "합계",
+    "statistic": "통계",
+    "no-transactions": "거래 없음",
+    "no-result": "결과 없음",
+    "hide": "숨기기",
+    "show": "보여주기",
+    "favorite": "즐겨찾기",
+    "cancel": "취소",
+    "rebet": "다시 베팅",
+    "double": "두 배",
+    "mode": "모드",
+    "stop": "멈추다",
+    "total-bet": "총 베팅",
+    "you-win": "당신이 이겼습니다",
+    "bet-confirmed": "베팅 확인됨",
+    "bet-error": "베팅 오류"
+}
