--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -1,1 +1,44 @@
-{}
+{
+    "menu": "เมนู",
+    "lobby": "ล็อบบี้",
+    "history": "ประวัติ",
+    "how-to-play": "วิธีการเล่น",
+    "payout-and-limit": "การจ่ายเงินและขีดจำกัด",
+    "promotion": "โปรโมชั่น",
+    "settings": "ตั้งค่า",
+    "video": "วิดีโอ",
+    "live-streaming-sound": "เสียงการถ่ายทอดสด",
+    "game-effects": "เอฟเฟกต์เกม",
+    "auto-rebet": "เดิมพันอัตโนมัติ",
+    "language": "ภาษา",
+    "main-bet": "เดิมพันหลัก",
+    "limit-bet": "เดิมพันขีดจำกัด",
+    "payout": "การจ่ายเงิน",
+    "side-bet": "เดิมพันข้าง",
+    "note": "หมายเหตุ",
+    "note-payout-and-limit": "การเดิมพันข้างไม่สามารถเกินครึ่งหนึ่งของจำนวนเงินเดิมพันหลัก",
+    "high": "สูง",
+    "medium": "ปานกลาง",
+    "auto": "อัตโนมัติ",
+    "today": "วันนี้",
+    "previous": "ก่อนหน้า",
+    "bet": "เดิมพัน",
+    "win": "ชนะ",
+    "period": "ช่วงเวลา",
+    "total": "รวม",
+    "statistic": "สถิติ",
+    "no-transactions": "ไม่มีธุรกรรม",
+    "no-result": "ไม่มีผลลัพธ์",
+    "hide": "ซ่อน",
+    "show": "แสดง",
+    "favorite": "รายการโปรด",
+    "cancel": "ยกเลิก",
+    "rebet": "เดิมพันซ้ำ",
+    "double": "เพิ่มเป็นสองเท่า",
+    "mode": "โหมด",
+    "stop": "หยุด",
+    "total-bet": "ยอดเดิมพันทั้งหมด",
+    "you-win": "คุณชนะ",
+    "bet-confirmed": "ยืนยันการเดิมพัน",
+    "bet-error": "ข้อผิดพลาดในการเดิมพัน"
+}
