--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -1,1 +1,44 @@
-{}
+{
+    "menu": "menu",
+    "lobby": "sảnh",
+    "history": "lịch sử",
+    "how-to-play": "cách chơi",
+    "payout-and-limit": "thanh toán và giới hạn",
+    "promotion": "khuyến mãi",
+    "settings": "cài đặt",
+    "video": "video",
+    "live-streaming-sound": "âm thanh trực tuyến",
+    "game-effects": "hiệu ứng trò chơi",
+    "auto-rebet": "tự động đặt cược lại",
+    "language": "ngôn ngữ",
+    "main-bet": "cược chính",
+    "limit-bet": "giới hạn cược",
+    "payout": "thanh toán",
+    "side-bet": "cược bên",
+    "note": "ghi chú",
+    "note-payout-and-limit": "Cược bên không được vượt quá một nửa số tiền cược chính",
+    "high": "cao",
+    "medium": "trung bình",
+    "auto": "tự động",
+    "today": "hôm nay",
+    "previous": "trước",
+    "bet": "đặt cược",
+    "win": "thắng",
+    "period": "kỳ",
+    "total": "tổng cộng",
+    "statistic": "thống kê",
+    "no-transactions": "không có giao dịch",
+    "no-result": "không có kết quả",
+    "hide": "ẩn",
+    "show": "hiển thị",
+    "favorite": "yêu thích",
+    "cancel": "hủy",
+    "rebet": "đặt cược lại",
+    "double": "gấp đôi",
+    "mode": "chế độ",
+    "stop": "dừng lại",
+    "total-bet": "tổng cược",
+    "you-win": "bạn thắng",
+    "bet-confirmed": "đặt cược đã xác nhận",
+    "bet-error": "lỗi đặt cược"
+}
