--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -1,1 +1,44 @@
-{}
+{
+    "menu": "菜单",
+    "lobby": "大厅",
+    "history": "历史",
+    "how-to-play": "玩法",
+    "payout-and-limit": "赔率和限制",
+    "promotion": "促销",
+    "settings": "设置",
+    "video": "视频",
+    "live-streaming-sound": "直播音效",
+    "game-effects": "游戏效果",
+    "auto-rebet": "自动再下注",
+    "language": "语言",
+    "main-bet": "主投注",
+    "limit-bet": "限额投注",
+    "payout": "支付",
+    "side-bet": "边注",
+    "note": "注释",
+    "note-payout-and-limit": "边注不得超过主投注金额的一半",
+    "high": "高",
+    "medium": "中",
+    "auto": "自动",
+    "today": "今天",
+    "previous": "以前",
+    "bet": "下注",
+    "win": "赢",
+    "period": "期间",
+    "total": "总计",
+    "statistic": "统计",
+    "no-transactions": "无交易",
+    "no-result": "无结果",
+    "hide": "隐藏",
+    "show": "显示",
+    "favorite": "收藏",
+    "cancel": "取消",
+    "rebet": "重新下注",
+    "double": "加倍",
+    "mode": "模式",
+    "stop": "停止",
+    "total-bet": "总投注",
+    "you-win": "你赢了",
+    "bet-confirmed": "投注已确认",
+    "bet-error": "投注错误"
+}
