--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -1,1 +1,44 @@
-{}
+{
+    "menu": "menu",
+    "lobby": "lobi",
+    "history": "riwayat",
+    "how-to-play": "cara bermain",
+    "payout-and-limit": "pembayaran dan batasan",
+    "promotion": "promosi",
+    "settings": "pengaturan",
+    "video": "video",
+    "live-streaming-sound": "suara siaran langsung",
+    "game-effects": "efek permainan",
+    "auto-rebet": "taruhan otomatis",
+    "language": "bahasa",
+    "main-bet": "taruhan utama",
+    "limit-bet": "batas taruhan",
+    "payout": "pembayaran",
+    "side-bet": "taruhan sampingan",
+    "note": "catatan",
+    "note-payout-and-limit": "Taruhan sampingan tidak dapat melebihi setengah jumlah taruhan utama",
+    "high": "tinggi",
+    "medium": "sedang",
+    "auto": "otomatis",
+    "today": "hari ini",
+    "previous": "sebelumnya",
+    "bet": "taruhan",
+    "win": "menang",
+    "period": "periode",
+    "total": "total",
+    "statistic": "statistik",
+    "no-transactions": "tidak ada transaksi",
+    "no-result": "tidak ada hasil",
+    "hide": "sembunyikan",
+    "show": "tampilkan",
+    "favorite": "favorit",
+    "cancel": "batalkan",
+    "rebet": "taruhan ulang",
+    "double": "gandakan",
+    "mode": "mode",
+    "stop": "berhenti",
+    "total-bet": "total taruhan",
+    "you-win": "kamu menang",
+    "bet-confirmed": "taruhan dikonfirmasi",
+    "bet-error": "kesalahan taruhan"
+}
