button action portrait

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -39,5 +39,6 @@
     "total-bet": "total bet",
     "you-win": "you win",
     "bet-confirmed": "bet confirmed",
-    "bet-error": "bet error"
+    "bet-error": "bet error",
+    "insuffix-balance": "insuffix balance"
 }
