--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -40,5 +40,6 @@
     "total-bet": "ยอดเดิมพันทั้งหมด",
     "you-win": "คุณชนะ",
     "bet-confirmed": "ยืนยันการเดิมพัน",
-    "bet-error": "ข้อผิดพลาดในการเดิมพัน"
+    "bet-error": "ข้อผิดพลาดในการเดิมพัน",
+    "insuffix-balance": "ยอดเงินคงเหลือไม่เพียงพอ"
 }
