--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -40,5 +40,6 @@
     "total-bet": "total taruhan",
     "you-win": "kamu menang",
     "bet-confirmed": "taruhan dikonfirmasi",
-    "bet-error": "kesalahan taruhan"
+    "bet-error": "kesalahan taruhan",
+    "insuffix-balance": "saldo tidak cukup"
 }
