--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -41,5 +41,10 @@
     "you-win": "คุณชนะ",
     "bet-confirmed": "ยืนยันการเดิมพัน",
     "bet-error": "ข้อผิดพลาดในการเดิมพัน",
-    "insuffix-balance": "ยอดเงินคงเหลือไม่เพียงพอ"
+    "bet-error-n50": "วางเดิมพัน '{{button}}' แล้ว",
+    "bet-error-max": "เดิมพัน '{{button}}' สูงสุด {{value}}",
+    "bet-error-min": "เดิมพัน '{{button}}' ขั้นต่ำ {{value}}",
+    "insuffix-balance": "ยอดเงินคงเหลือไม่เพียงพอ",
+    "autobet-error-insufficient-balance": "เดิมพันอัตโนมัติล้มเหลว ยอดเงินคงเหลือไม่เพียงพอ",
+    "doublebet-error-max-bet": "ข้อผิดพลาดในการเดิมพันสองเท่า การเดิมพันสูงสุด"
 }
