--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -41,5 +41,10 @@
     "you-win": "bạn thắng",
     "bet-confirmed": "đặt cược đã xác nhận",
     "bet-error": "lỗi đặt cược",
-    "insuffix-balance": "số dư không đủ"
+    "bet-error-n50": "Đã đặt cược '{{button}}'",
+    "bet-error-max": "Cược '{{button}}' tối đa {{value}}",
+    "bet-error-min": "Cược '{{button}}' tối thiểu {{value}}",
+    "insuffix-balance": "số dư không đủ",
+    "autobet-error-insufficient-balance": "tự động cược thất bại, số dư không đủ",
+    "doublebet-error-max-bet": "lỗi cược đôi, cược tối đa"
 }
