--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -27,6 +27,7 @@
     "period": "period",
     "total": "total",
     "statistic": "statistic",
+    "pattern": "pattern",
     "no-transactions": "no transactions",
     "no-result": "no result",
     "hide": "hide",
