--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -27,6 +27,7 @@
     "period": "periode",
     "total": "total",
     "statistic": "statistik",
+    "pattern": "pola",
     "no-transactions": "tidak ada transaksi",
     "no-result": "tidak ada hasil",
     "hide": "sembunyikan",
