--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -27,6 +27,7 @@
     "period": "기간",
     "total": "합계",
     "statistic": "통계",
+    "pattern": "무늬",
     "no-transactions": "거래 없음",
     "no-result": "결과 없음",
     "hide": "숨기기",
