--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -27,6 +27,7 @@
     "period": "ช่วงเวลา",
     "total": "รวม",
     "statistic": "สถิติ",
+    "pattern": "ลวดลาย",
     "no-transactions": "ไม่มีธุรกรรม",
     "no-result": "ไม่มีผลลัพธ์",
     "hide": "ซ่อน",
