--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -27,6 +27,7 @@
     "period": "kỳ",
     "total": "tổng cộng",
     "statistic": "thống kê",
+    "pattern": "mẫu",
     "no-transactions": "không có giao dịch",
     "no-result": "không có kết quả",
     "hide": "ẩn",
