--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -27,6 +27,7 @@
     "period": "期间",
     "total": "总计",
     "statistic": "统计",
+    "pattern": "圖案",
     "no-transactions": "无交易",
     "no-result": "无结果",
     "hide": "隐藏",
