reaccurate bet buton

--- a/src/locales/en/m23.json
+++ b/src/locales/en/m23.json
@@ -21,6 +21,14 @@
         "1st Row,2nd Row": "R.1-2",
         "3rd Row,4th Row": "R.3-4"
     },
+    "dragonpair": "dragon pair",
+    "tigerpair": "tiger pair",
+    "dragonwild": "dragon wild",
+    "tigerwild": "tiger wild",
+    "dragon": "dragon",
+    "superwild": "super wild",
+    "tie": "tie",
+    "tiger": "tiger",
     "big": "big",
     "small": "small",
     "odd": "odd",
