--- a/src/locales/id/m23.json
+++ b/src/locales/id/m23.json
@@ -21,14 +21,14 @@
         "1st Row,2nd Row": "R.1-2",
         "3rd Row,4th Row": "R.3-4"
     },
-    "dragonpair": "dragon pair",
-    "tigerpair": "tiger pair",
-    "dragonwild": "dragon wild",
-    "tigerwild": "tiger wild",
-    "dragon": "dragon",
-    "tiger": "tiger",
+    "dragonpair": "pair naga",
+    "tigerpair": "pair harimau",
+    "dragonwild": "naga wild",
+    "tigerwild": "harimau wild",
+    "dragon": "naga",
+    "tiger": "harimau",
     "superwild": "super wild",
-    "tie": "tie",
+    "tie": "seri",
     "big": "big",
     "small": "small",
     "odd": "odd",
