--- a/src/locales/en/p6.json
+++ b/src/locales/en/p6.json
@@ -28,8 +28,8 @@
     "red": "red",
     "black": "black",
     "one number": "One Number",
-    "two number": "Two Number",
-    "four number": "Four Number",
+    "two numbers": "Two Number",
+    "four numbers": "Four Number",
     "single row": "Single Row",
     "single column": "Single Column",
     "double row": "Double Row",
