--- a/src/locales/id/p6.json
+++ b/src/locales/id/p6.json
@@ -28,8 +28,8 @@
     "red": "merah",
     "black": "hitam",
     "one number": "Satu Nomor",
-    "two number": "Dua Nomor",
-    "four number": "Empat Nomor",
+    "two numbers": "Dua Nomor",
+    "four numbers": "Empat Nomor",
     "single row": "Baris Tunggal",
     "single column": "Kolom Tunggal",
     "double row": "Baris Ganda",
