--- a/src/locales/ko/p6.json
+++ b/src/locales/ko/p6.json
@@ -28,8 +28,8 @@
     "red": "빨간색",
     "black": "검은색",
     "one number": "한 숫자",
-    "two number": "두 숫자",
-    "four number": "네 숫자",
+    "two numbers": "두 숫자",
+    "four numbers": "네 숫자",
     "single row": "단일 행",
     "single column": "단일 열",
     "double row": "이중 행",
