--- a/src/locales/th/p6.json
+++ b/src/locales/th/p6.json
@@ -28,8 +28,8 @@
     "red": "แดง",
     "black": "ดำ",
     "one number": "หนึ่งตัวเลข",
-    "two number": "สองตัวเลข",
-    "four number": "สี่ตัวเลข",
+    "two numbers": "สองตัวเลข",
+    "four numbers": "สี่ตัวเลข",
     "single row": "แถวเดี่ยว",
     "single column": "คอลัมน์เดี่ยว",
     "double row": "แถวคู่",
