--- a/src/locales/vn/p6.json
+++ b/src/locales/vn/p6.json
@@ -28,8 +28,8 @@
     "red": "đỏ",
     "black": "đen",
     "one number": "Một Số",
-    "two number": "Hai Số",
-    "four number": "Bốn Số",
+    "two numbers": "Hai Số",
+    "four numbers": "Bốn Số",
     "single row": "Hàng Đơn",
     "single column": "Cột Đơn",
     "double row": "Hàng Đôi",
