--- a/src/locales/zh/p6.json
+++ b/src/locales/zh/p6.json
@@ -28,8 +28,8 @@
     "red": "红",
     "black": "黑",
     "one number": "一个号码",
-    "two number": "两个号码",
-    "four number": "四个号码",
+    "two numbers": "两个号码",
+    "four numbers": "四个号码",
     "single row": "单行",
     "single column": "单列",
     "double row": "双行",
