--- a/src/locales/id/m23.json
+++ b/src/locales/id/m23.json
@@ -34,5 +34,13 @@
     "odd": "odd",
     "even": "even",
     "red": "red",
-    "black": "black"
+    "black": "black",
+
+    "wild bet": "wild bet",
+    "dragon wild": "naga wild",
+    "tiger wild": "harimau wild",
+    "super wild": "super wild",
+    "pair bet": "pair bet",
+    "dragon pair": "pair naga",
+    "tiger pair": "pair harimau"
 }
