update lang english, "show chip"

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -30,6 +30,7 @@
     "no-transactions": "no transactions",
     "no-result": "no result",
     "hide": "hide",
+    "show": "show",
     "favorite": "favorite",
     "cancel": "cancel",
     "rebet": "rebet",
