--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -1,5 +1,6 @@
 {
     "menu": "메뉴",
+    "pattern": "무늬",
     "lobby": "로비",
     "history": "기록",
     "how-to-play": "게임 방법",
@@ -41,11 +42,12 @@
     "you-win": "당신이 이겼습니다",
     "bet-confirmed": "베팅 확인됨",
     "bet-error": "베팅 오류",
-    "bet-error-n50": "'{{button}}' 베팅을 이미 배치했습니다",
-    "bet-error-max": "'{{button}}' 베팅 최대 {{value}}",
-    "bet-error-min": "'{{button}}' 베팅 최소 {{value}}",
+    "bet-error-n50": "이미 {{button}} 베팅을 했습니다. {{other}}에 베팅할 수 없습니다",
+    "bet-error-max": "{{button}} 베팅 최대 {{value}}",
+    "bet-error-min": "{{button}} 베팅 최소 {{value}}",
     "insuffix-balance": "잔액 부족",
     "autobet-error-insufficient-balance": "자동 베팅 실패, 잔액 부족",
     "doublebet-error-max-bet": "이중 베팅 오류, 최대 베팅",
+    "bet-void-n50": "{{button}}에 베팅하려면 먼저 플레이어, 뱅커 또는 타이에 베팅해야 합니다",
     "winner": "승자"
 }
