--- a/src/locales/ko/htp.json
+++ b/src/locales/ko/htp.json
@@ -14,5 +14,13 @@
             "단일 숫자에 대한 베팅만 행운의 숫자 & 잭팟 숫자 보너스 시스템에 참여할 수 있습니다. 단일 숫자 베팅 외의 모든 베팅은 지급 표에 따라 정상적으로 지급됩니다.",
             "한 게임 라운드의 결과는 1에서 24까지의 숫자 중 하나입니다. 공이 명확하게 위치하지 않은 경우 \"게임 없음\" 상태가 발생하며, 딜러가 결과가 명확해질 때까지 케이지를 다시 회전시킵니다."
         ]
+    },
+    "placing-a-bet": {
+        "title": "베팅하기",
+        "single-bet": "숫자 1개에 베팅 (단일 베팅).",
+        "split-bet": "숫자 2개에 베팅 (스플릿 베팅).",
+        "corner-bet": "숫자 4개에 베팅 (코너 베팅).",
+        "row-column-bets": "행 & 열 베팅.",
+        "50-50-bet": "50-50 베팅 (작은/큰, 홀수/짝수, 빨간색/검은색)."
     }
 }
