--- a/src/locales/th/htp.json
+++ b/src/locales/th/htp.json
@@ -14,5 +14,13 @@
             "เฉพาะการเดิมพันในหมายเลขเดียวเท่านั้นที่มีสิทธิ์ได้รับระบบโบนัสเลขนำโชค & แจ็คพอต การเดิมพันทั้งหมดนอกเหนือจากการเดิมพันหมายเลขเดียวจะได้รับเงินตามปกติตามตารางการจ่ายเงิน",
             "ผลลัพธ์สำหรับหนึ่งรอบของเกมคือหมายเลขเดียวที่ประกอบด้วยหมายเลข 1 ถึง 24 หากลูกบอลไม่อยู่ในตำแหน่งที่ชัดเจน สถานะ \"ไม่มีเกม\" จะเกิดขึ้นและดีลเลอร์จะหมุนกรงอีกครั้งจนกว่าผลลัพธ์จะชัดเจน"
         ]
+    },
+    "placing-a-bet": {
+        "title": "การวางเดิมพัน",
+        "single-bet": "เดิมพันที่หมายเลข 1 (เดิมพันเดี่ยว).",
+        "split-bet": "เดิมพันที่หมายเลข 2 (เดิมพันแบ่ง).",
+        "corner-bet": "เดิมพันที่หมายเลข 4 (เดิมพันมุม).",
+        "row-column-bets": "เดิมพันแถว & คอลัมน์.",
+        "50-50-bet": "เดิมพัน 50-50 (เล็ก/ใหญ่, คี่/คู่, แดง/ดำ)."
     }
 }
