--- a/src/locales/zh/htp.json
+++ b/src/locales/zh/htp.json
@@ -14,5 +14,13 @@
             "只有单个数字投注有资格参与幸运号码和累积奖金号码奖励系统。 除单个数字投注外的所有投注将按支付表正常支付。",
             "一轮游戏的结果仅为 1 到 24 之间的一个数字。如果球未明确定位，则会发生 \"无游戏\" 状态，荷官会重新旋转笼子直到结果明确。"
         ]
+    },
+    "placing-a-bet": {
+        "title": "下注",
+        "single-bet": "押1个数字（单注）。",
+        "split-bet": "押2个数字（分注）。",
+        "corner-bet": "押4个数字（角注）。",
+        "row-column-bets": "行和列的投注。",
+        "50-50-bet": "50-50投注（小/大，单/双，红/黑）。"
     }
 }
