update betting panel 24d jp

--- a/src/locales/th/p6.json
+++ b/src/locales/th/p6.json
@@ -1,26 +1,25 @@
 {
-    "bet": {
-        "1st Column": "คอลัมน์ 1",
-        "2nd Column": "คอลัมน์ 2",
-        "3rd Column": "คอลัมน์ 3",
-        "4th Column": "คอลัมน์ 4",
-        "5th Column": "คอลัมน์ 5",
-        "6th Column": "คอลัมน์ 6",
+    "1st Column": "คอลัมน์ 1",
+    "2nd Column": "คอลัมน์ 2",
+    "3rd Column": "คอลัมน์ 3",
+    "4th Column": "คอลัมน์ 4",
+    "5th Column": "คอลัมน์ 5",
+    "6th Column": "คอลัมน์ 6",
 
-        "1st Row": "แถว 1",
-        "2nd Row": "แถว 2",
-        "3rd Row": "แถว 3",
-        "4th Row": "แถว 4",
+    "1st Row": "แถว 1",
+    "2nd Row": "แถว 2",
+    "3rd Row": "แถว 3",
+    "4th Row": "แถว 4",
 
-        "1st Column,2nd Column": "คอลัมน์ 1-2",
-        "2nd Column,3rd Column": "คอลัมน์ 2-3",
-        "3rd Column,4th Column": "คอลัมน์ 3-4",
-        "4th Column,5th Column": "คอลัมน์ 4-5",
-        "5th Column,6th Column": "คอลัมน์ 5-6",
+    "1st Column,2nd Column": "คอลัมน์ 1-2",
+    "2nd Column,3rd Column": "คอลัมน์ 2-3",
+    "3rd Column,4th Column": "คอลัมน์ 3-4",
+    "4th Column,5th Column": "คอลัมน์ 4-5",
+    "5th Column,6th Column": "คอลัมน์ 5-6",
 
-        "1st Row,2nd Row": "แถว 1-2",
-        "3rd Row,4th Row": "แถว 3-4"
-    },
+    "1st Row,2nd Row": "แถว 1-2",
+    "3rd Row,4th Row": "แถว 3-4",
+
     "big": "ใหญ่",
     "small": "เล็ก",
     "odd": "คี่",
