--- a/src/locales/zh/p6.json
+++ b/src/locales/zh/p6.json
@@ -1,26 +1,25 @@
 {
-    "bet": {
-        "1st Column": "第 1 列",
-        "2nd Column": "第 2 列",
-        "3rd Column": "第 3 列",
-        "4th Column": "第 4 列",
-        "5th Column": "第 5 列",
-        "6th Column": "第 6 列",
+    "1st Column": "第 1 列",
+    "2nd Column": "第 2 列",
+    "3rd Column": "第 3 列",
+    "4th Column": "第 4 列",
+    "5th Column": "第 5 列",
+    "6th Column": "第 6 列",
 
-        "1st Row": "第 1 行",
-        "2nd Row": "第 2 行",
-        "3rd Row": "第 3 行",
-        "4th Row": "第 4 行",
+    "1st Row": "第 1 行",
+    "2nd Row": "第 2 行",
+    "3rd Row": "第 3 行",
+    "4th Row": "第 4 行",
 
-        "1st Column,2nd Column": "第 1-2 列",
-        "2nd Column,3rd Column": "第 2-3 列",
-        "3rd Column,4th Column": "第 3-4 列",
-        "4th Column,5th Column": "第 4-5 列",
-        "5th Column,6th Column": "第 5-6 列",
+    "1st Column,2nd Column": "第 1-2 列",
+    "2nd Column,3rd Column": "第 2-3 列",
+    "3rd Column,4th Column": "第 3-4 列",
+    "4th Column,5th Column": "第 4-5 列",
+    "5th Column,6th Column": "第 5-6 列",
 
-        "1st Row,2nd Row": "第 1-2 行",
-        "3rd Row,4th Row": "第 3-4 行"
-    },
+    "1st Row,2nd Row": "第 1-2 行",
+    "3rd Row,4th Row": "第 3-4 行",
+
     "big": "大",
     "small": "小",
     "odd": "单",
