update usePlaceBet, use format number in i18next

--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -43,8 +43,8 @@
     "bet-confirmed": "taruhan dikonfirmasi",
     "bet-error": "kesalahan taruhan",
     "bet-error-n50": "Pasang {{button}}, Tidak bisa pasang {{other}}",
-    "bet-error-max": "Taruhan {{button}} maksimal {{value}}",
-    "bet-error-min": "Taruhan {{button}} minimal {{value}}",
+    "bet-error-max": "Taruhan {{button}} maksimal {{value, number}}",
+    "bet-error-min": "Taruhan {{button}} minimal {{value, number}}",
     "insuffix-balance": "saldo tidak cukup",
     "autobet-error-insufficient-balance": "autobet gagal, saldo tidak mencukupi",
     "doublebet-error-max-bet": "kesalahan gandakan taruhan, taruhan maksimum",
