--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -43,8 +43,8 @@
     "bet-confirmed": "베팅 확인됨",
     "bet-error": "베팅 오류",
     "bet-error-n50": "이미 {{button}} 베팅을 했습니다. {{other}}에 베팅할 수 없습니다",
-    "bet-error-max": "{{button}} 베팅 최대 {{value}}",
-    "bet-error-min": "{{button}} 베팅 최소 {{value}}",
+    "bet-error-max": "{{button}} 베팅 최대 {{value, number}}",
+    "bet-error-min": "{{button}} 베팅 최소 {{value, number}}",
     "insuffix-balance": "잔액 부족",
     "autobet-error-insufficient-balance": "자동 베팅 실패, 잔액 부족",
     "doublebet-error-max-bet": "이중 베팅 오류, 최대 베팅",
