--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -43,8 +43,8 @@
     "bet-confirmed": "ยืนยันการเดิมพัน",
     "bet-error": "ข้อผิดพลาดในการเดิมพัน",
     "bet-error-n50": "วางเดิมพัน {{button}} แล้ว คุณไม่สามารถเดิมพัน {{other}} ได้",
-    "bet-error-max": "เดิมพัน {{button}} สูงสุด {{value}}",
-    "bet-error-min": "เดิมพัน {{button}} ขั้นต่ำ {{value}}",
+    "bet-error-max": "เดิมพัน {{button}} สูงสุด {{value, number}}",
+    "bet-error-min": "เดิมพัน {{button}} ขั้นต่ำ {{value, number}}",
     "insuffix-balance": "ยอดเงินคงเหลือไม่เพียงพอ",
     "autobet-error-insufficient-balance": "เดิมพันอัตโนมัติล้มเหลว ยอดเงินคงเหลือไม่เพียงพอ",
     "doublebet-error-max-bet": "ข้อผิดพลาดในการเดิมพันสองเท่า การเดิมพันสูงสุด",
