--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -43,8 +43,8 @@
     "bet-confirmed": "投注已确认",
     "bet-error": "投注错误",
     "bet-error-n50": "已下注 {{button}}，您不能下注 {{other}}",
-    "bet-error-max": "下注 {{button}} 最大 {{value}}",
-    "bet-error-min": "下注 {{button}} 最小 {{value}}",
+    "bet-error-max": "下注 {{button}} 最大 {{value, number}}",
+    "bet-error-min": "下注 {{button}} 最小 {{value, number}}",
     "insuffix-balance": "余额不足",
     "autobet-error-insufficient-balance": "自动下注失败，余额不足",
     "doublebet-error-max-bet": "双倍下注错误，最大下注",
