--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -43,8 +43,8 @@
     "bet-confirmed": "bet confirmed",
     "bet-error": "bet error",
     "bet-error-n50": "Already placed {{button}} bet, can't bet {{other}}",
-    "bet-error-max": "Bet {{button}} maximal {{value}}",
-    "bet-error-min": "Bet {{button}} minimal {{value}}",
+    "bet-error-max": "Bet {{button}} maximal {{value, number}}",
+    "bet-error-min": "Bet {{button}} minimal {{value, number}}",
     "insuffix-balance": "insuffix balance",
     "autobet-error-insufficient-balance": "autobet failed, insufficient balance",
     "doublebet-error-max-bet": "double bet error, max bet",
